1998-10-30  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ScheduleItem.m ([ScheduleItem -update]): Set processingUpdate
	during duration of method.
	([ScheduleItem -update]): Iterate through pendingEvents, stopping
	if pendingDrop occurs (instead of forEach:).
	([ScheduleItem -_drop_]): Contents of previous drop.
	([ScheduleItem -drop]): Call _drop_ if not processingUpdate otherwise
	set pendingDrop.

	* ScheduleItem.h (ScheduleItem): New status variables
	processingUpdate and pendingDrop.

1998-10-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_pixmap_create_from_widget): Ignore return
	values of XChangeWindowAttributes, XMapWindow, XUnmapWindow -- they
	don't have one.

1998-10-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3.1 released.
	
	* internal.m (setSecondaryPath): Instead of $SWARMHOME/lib/ 
	use $SWARMHOME/../library/$dirname, where dirname is a new argument.
	(tkobjc_initTclInterp, tkobjc_initTkInterp): Pass "tcl8.0" and
	"tk8.0" respectively as new arguments.

1998-10-15  Alex Lancaster  <alex@santafe.edu>

	* trigger.xpm, schedule.xpm: Add pixmaps to support ScheduleItem
	widget.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (XPMINCLUDES): New substituted variable.
	(INCLUDES): Use it.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (XPMFILES): New variable.
	(EXTRA_DIST): Include it.
	
	* TkExtra.m (ensureBltSupportFiles): Check ../BLT/library instead
	of lib.  Quote the value for set of blt_library.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Widget.m (get_geometry_element): Make i unsigned.

	* win32dib.h (dib_paletteIndexForObject): Change "for" to "For".
	
	* win32dib.c (dib_snapshot): Remove i.  Initialize holdPal to
	NULL.  Cast height to int for comparison with return of GetDIBits.
	Don't call SelectObject for holdPal unless it is non-NULL.
	(dib_paletteIndexForObject): Make i unsigned.